--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </style>
   <body>
     <h1>Welcome to my 3610 portfolio page!</h1>
+    <h4>Nour Sleiman | noursleiman07@gmail.com</h4>
     <a href="./labs/lab1.html">Lab 1 - Graph</a>
     <br />
     <br />
