--- a/index.html
+++ b/index.html
@@ -20,13 +20,29 @@
       text-align: center;
       background-color: #c9f9ff;
     }
+
+    td,
+    th {
+      padding: 2%;
+    }
   </style>
   <body>
     <h1>Welcome to my 3610 portfolio page!</h1>
     <h4>Nour Sleiman | noursleiman07@gmail.com</h4>
-    <a href="./labs/lab1.html">Lab 1 - Graph</a>
-    <br />
-    <br />
-    <a href="./projects/cartoon.html">Cartoon</a>
+    <table
+      style="border: none; text-align: center; margin-left: 20%; width: 50%"
+    >
+      <tr>
+        <th>Labs</th>
+        <th>Projects</th>
+      </tr>
+      <tr>
+        <td><a href="./labs/lab1.html">Lab 1 - Graph</a></td>
+        <td><a href="./projects/cartoon.html">Cartoon</a></td>
+      </tr>
+      <tr>
+        <td><a href="./labs/lab2.html">Lab 2 - Numbers Animation</a></td>
+      </tr>
+    </table>
   </body>
 </html>
