adding animation project

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </tr>
       <tr>
         <td><a href="./labs/lab2.html">Lab 2 - Numbers Animation</a></td>
+        <td><a href="./projects/animation.html">Animation</a></td>
       </tr>
     </table>
   </body>
