--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <td><a href="./labs/lab2.html">Lab 2 - Numbers Animation</a></td>
         <td><a href="./projects/animation.html">Animation</a></td>
       </tr>
+      <tr>
+        <td><a href="./labs/lab3.html">Lab 3 - Notebook</a></td>
+      </tr>
     </table>
   </body>
 </html>
