uploaded data visualization project

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       </tr>
       <tr>
         <td><a href="./labs/lab3.html">Lab 3 - Notebook</a></td>
+        <td>
+          <a href="./projects/dataVisualization.html">Data Visualization</a>
+        </td>
       </tr>
     </table>
   </body>
