--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
           <a href="./projects/dataVisualization.html">Data Visualization</a>
         </td>
       </tr>
+      <tr>
+        <td><a href="./labs/lab4.html">Lab 4 - Resume</a></td>
+        <td><a href="./projects/phaser/game.html">Phaser Project</a></td>
+      </tr>
+      <tr>
+        <td><a href="./labs/lab5.html">Lab 5 - Audio</a></td>
+      </tr>
+      <tr>
+        <td><a href="./labs/lab6.html">Lab 6 - Phaser</a></td>
+      </tr>
     </table>
   </body>
 </html>
