--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
       <tr>
         <td><a href="./labs/lab6.html">Lab 6 - Phaser</a></td>
       </tr>
+      <tr>
+        <td><a href="./labs/lab7.html">Lab 7 - Video</a></td>
+      </tr>
     </table>
   </body>
 </html>
