wick and voice recognition projects

--- a/index.html
+++ b/index.html
@@ -56,12 +56,17 @@
       </tr>
       <tr>
         <td><a href="./labs/lab5.html">Lab 5 - Audio</a></td>
+        <td>
+          <a href="./projects/voiceRecognition.html">Voice Recognition</a>
+        </td>
       </tr>
       <tr>
         <td><a href="./labs/lab6.html">Lab 6 - Phaser</a></td>
+        <td><a href="./projects/wick_project.html">WickEditor Project</a></td>
       </tr>
       <tr>
         <td><a href="./labs/lab7.html">Lab 7 - Video</a></td>
+        <td><a href="./projects/wick_project.wick">Wick .wick file</a></td>
       </tr>
     </table>
   </body>
